[tool.poetry]
name = "allenai-common"
version = "1.1.1"
description = "Params, FromParams, Registrable, Lazy classes from AllenNLP"
authors = ["Ivan Fursov <fursovia@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/fursovia/allenai-common"
repository = "https://github.com/fursovia/allenai-common"

[tool.poetry.dependencies]
python = "^3.6"
overrides = "==3.1.0"
filelock = "^3.0.0"
requests = "^2.18.0"
tqdm = "^4.19.0"
boto3 = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
